syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;

option go_package = "github.com/dodocheck/go-pet-project-1/pkg/pb;pb";

// Data for adding a new task
message TaskImportData {
  string title = 1;
  string text  = 2;
}

// Full data about existing task
message TaskExportData {
  int64                     id          = 1;
  string                    title       = 2;
  string                    text        = 3;
  bool                      finished    = 4;
  google.protobuf.Timestamp created_at  = 5;
  google.protobuf.Timestamp finished_at = 6;
}

// Id to identify a particular task
message TaskId {
  int64 id = 1;
}

// List of all existing tasks
message TaskList {
  repeated TaskExportData tasks = 1;
}
